Add Header to layout, and a Nav for the header

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Learn Enough Ruby Sample App</title>
+    <title>Learn Enough Ruby Sample App | <%= @title %></title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
           rel="stylesheet">
@@ -12,6 +12,15 @@
       <img src="/images/logo_b.png" alt="Learn Enough logo">
     </a>
     <div class="container">
+      <header class="header">
+        <nav>
+          <ul class="header-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/palindrome">Is It a Palindrome?</a></li>
+            <li><a href="/about">About</a></li>
+          </ul>
+        </nav>
+      </header>
       <div class="content">
         <%= yield %>
       </div>
