No idea why nokogiri is forgetting .content for second test

--- a/views/palindrome.erb
+++ b/views/palindrome.erb
@@ -1,3 +1,5 @@
 <h1>Palindrome Detector</h1>
 
-<p>This will be the palindrome detector.</p>
+<form id="palindrome_tester" action="/check" method="post">
+<textarea name="phrase" rows="10" cols="60"></textarea>
+<button class="form-submit" type="submit">Is it a palindrome?</button>
