Add headline for result page

--- a/views/result.erb
+++ b/views/result.erb
@@ -1,3 +1,4 @@
+<h1>Palindrome Result</h1>
 <% if @phrase.palindrome? %>
 	<div class="result result-success">
 		<p> "<%= @phrase %>" is a palindrome!</p>
