--- a/views/palindrome.erb
+++ b/views/palindrome.erb
@@ -1,5 +1,3 @@
 <h1>Palindrome Detector</h1>
 
-<form id="palindrome_tester" action="/check" method="post">
-<textarea name="phrase" rows="10" cols="60"></textarea>
-<button class="form-submit" type="submit">Is it a palindrome?</button>
+<%= erb :palindrome_form %>
